# covid-19-web-scraper

./: .gitignore  README.md  app.py  coronaWebScrape.py  corona_web_scrape.py  data.csv  main.py  pyproject.toml  requirements.txt
static/css/: styles.css  styles.css.map  styles.scss
templates/: base.html  index.html  result.html
