[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "stocks"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
pyglet = "^1.5"
python = "^3.8"
[tool.poetry.dev-dependencies]
